Added functions to parse  strings in json, Added dynamic level selecting, Changed levels to be array of strings

--- a/dumb-ways-to-memorize/dumb-ways-to-memorize.vcxproj
+++ b/dumb-ways-to-memorize/dumb-ways-to-memorize.vcxproj
@@ -85,6 +85,7 @@
     <ClCompile Include="External_Libs\jsmn.c" />
     <ClCompile Include="game.c" />
     <ClCompile Include="main.c" />
+    <ClCompile Include="mymath.c" />
     <ClCompile Include="mystrings.c" />
     <ClCompile Include="parseobject.c" />
   </ItemGroup>
