--- a/dumb-ways-to-memorize/dumb-ways-to-memorize.vcxproj.filters
+++ b/dumb-ways-to-memorize/dumb-ways-to-memorize.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="parseobject.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="mymath.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
