--- a/dumb-ways-to-memorize/dumb-ways-to-memorize.vcxproj.filters
+++ b/dumb-ways-to-memorize/dumb-ways-to-memorize.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="mymath.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="graphics.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -60,6 +63,9 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="parseobject.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="graphics.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
