--- a/dumb-ways-to-memorize/dumb-ways-to-memorize.vcxproj
+++ b/dumb-ways-to-memorize/dumb-ways-to-memorize.vcxproj
@@ -56,6 +56,7 @@
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;JSMN_PARENT_LINKS;JSMN_STRICT;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <CompileAs>CompileAsC</CompileAs>
       <ExceptionHandling>SyncCThrow</ExceptionHandling>
+      <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -88,6 +89,7 @@
     <ClCompile Include="main.c" />
     <ClCompile Include="mymath.c" />
     <ClCompile Include="mystrings.c" />
+    <ClCompile Include="parsefunction.c" />
     <ClCompile Include="parseobject.c" />
   </ItemGroup>
   <ItemGroup>
@@ -98,8 +100,16 @@
     <ClInclude Include="main.h" />
     <ClInclude Include="menu.h" />
     <ClInclude Include="mystrings.h" />
+    <ClInclude Include="parsefunction.h" />
     <ClInclude Include="parseobject.h" />
     <ClInclude Include="player.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="System" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
