--- a/dumb-ways-to-memorize/dumb-ways-to-memorize.vcxproj.filters
+++ b/dumb-ways-to-memorize/dumb-ways-to-memorize.vcxproj.filters
@@ -42,6 +42,12 @@
     <ClCompile Include="parsefunction.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="player.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="parsepowerup.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -62,9 +68,6 @@
     <ClInclude Include="mystrings.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="player.h">
-      <Filter>Source Files</Filter>
-    </ClInclude>
     <ClInclude Include="parseobject.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -72,6 +75,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="parsefunction.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="player.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="parsepowerup.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
