--- a/dumb-ways-to-memorize/dumb-ways-to-memorize.vcxproj.filters
+++ b/dumb-ways-to-memorize/dumb-ways-to-memorize.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="parsepowerup.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="parsevariable.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -81,6 +84,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="parsepowerup.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="parsevariable.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
