I am the god of object parsing. I guess I also added level, stuff, but I AM GOD.

--- a/dumb-ways-to-memorize/dumb-ways-to-memorize.vcxproj
+++ b/dumb-ways-to-memorize/dumb-ways-to-memorize.vcxproj
@@ -90,6 +90,7 @@
     <ClCompile Include="mymath.c" />
     <ClCompile Include="mystrings.c" />
     <ClCompile Include="parsefunction.c" />
+    <ClCompile Include="parselevel.c" />
     <ClCompile Include="parseobject.c" />
     <ClCompile Include="parsepowerup.c" />
     <ClCompile Include="parsevariable.c" />
@@ -104,6 +105,7 @@
     <ClInclude Include="menu.h" />
     <ClInclude Include="mystrings.h" />
     <ClInclude Include="parsefunction.h" />
+    <ClInclude Include="parselevel.h" />
     <ClInclude Include="parseobject.h" />
     <ClInclude Include="parsepowerup.h" />
     <ClInclude Include="parsevariable.h" />
