--- a/dumb-ways-to-memorize/dumb-ways-to-memorize.vcxproj.filters
+++ b/dumb-ways-to-memorize/dumb-ways-to-memorize.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClCompile Include="parselevel.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="menu.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
