MAJOR Level parsing rework, to match the optimized parseentity format, added level playlist.

--- a/dumb-ways-to-memorize/dumb-ways-to-memorize.vcxproj
+++ b/dumb-ways-to-memorize/dumb-ways-to-memorize.vcxproj
@@ -83,6 +83,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="ai_interpret.c" />
+    <ClCompile Include="audio.c" />
     <ClCompile Include="dumb_physics.c" />
     <ClCompile Include="entity.c" />
     <ClCompile Include="External_Libs\jsmn.c" />
