--- a/dumb-ways-to-memorize/dumb-ways-to-memorize.vcxproj.filters
+++ b/dumb-ways-to-memorize/dumb-ways-to-memorize.vcxproj.filters
@@ -13,6 +13,9 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Source Files\Chipmunk">
+      <UniqueIdentifier>{cc17529d-cafd-4156-b5da-a94c49723971}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="game.c">
@@ -69,6 +72,60 @@
     <ClCompile Include="audio.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\..\..\..\..\Lib\Chipmunk6\src\chipmunk.c">
+      <Filter>Source Files\Chipmunk</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\..\..\..\Lib\Chipmunk6\src\cpArbiter.c">
+      <Filter>Source Files\Chipmunk</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\..\..\..\Lib\Chipmunk6\src\cpArray.c">
+      <Filter>Source Files\Chipmunk</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\..\..\..\Lib\Chipmunk6\src\cpBB.c">
+      <Filter>Source Files\Chipmunk</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\..\..\..\Lib\Chipmunk6\src\cpBBTree.c">
+      <Filter>Source Files\Chipmunk</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\..\..\..\Lib\Chipmunk6\src\cpBody.c">
+      <Filter>Source Files\Chipmunk</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\..\..\..\Lib\Chipmunk6\src\cpCollision.c">
+      <Filter>Source Files\Chipmunk</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\..\..\..\Lib\Chipmunk6\src\cpHashSet.c">
+      <Filter>Source Files\Chipmunk</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\..\..\..\Lib\Chipmunk6\src\cpPolyShape.c">
+      <Filter>Source Files\Chipmunk</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\..\..\..\Lib\Chipmunk6\src\cpShape.c">
+      <Filter>Source Files\Chipmunk</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\..\..\..\Lib\Chipmunk6\src\cpSpace.c">
+      <Filter>Source Files\Chipmunk</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\..\..\..\Lib\Chipmunk6\src\cpSpaceComponent.c">
+      <Filter>Source Files\Chipmunk</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\..\..\..\Lib\Chipmunk6\src\cpSpaceHash.c">
+      <Filter>Source Files\Chipmunk</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\..\..\..\Lib\Chipmunk6\src\cpSpaceQuery.c">
+      <Filter>Source Files\Chipmunk</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\..\..\..\Lib\Chipmunk6\src\cpSpaceStep.c">
+      <Filter>Source Files\Chipmunk</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\..\..\..\Lib\Chipmunk6\src\cpSpatialIndex.c">
+      <Filter>Source Files\Chipmunk</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\..\..\..\Lib\Chipmunk6\src\cpSweep1D.c">
+      <Filter>Source Files\Chipmunk</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\..\..\..\Lib\Chipmunk6\src\cpVect.c">
+      <Filter>Source Files\Chipmunk</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -122,5 +179,13 @@
     <ClInclude Include="player_controller.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\..\Lib\Chipmunk6\src\prime.h">
+      <Filter>Source Files\Chipmunk</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\..\..\..\..\..\Lib\Chipmunk6\src\CMakeLists.txt">
+      <Filter>Source Files\Chipmunk</Filter>
+    </None>
   </ItemGroup>
 </Project>
