--- a/dumb-ways-to-memorize/dumb-ways-to-memorize.vcxproj.filters
+++ b/dumb-ways-to-memorize/dumb-ways-to-memorize.vcxproj.filters
@@ -126,6 +126,12 @@
     <ClCompile Include="..\..\..\..\..\..\..\Lib\Chipmunk6\src\cpVect.c">
       <Filter>Source Files\Chipmunk</Filter>
     </ClCompile>
+    <ClCompile Include="dumb_ui.h">
+      <Filter>Header Files</Filter>
+    </ClCompile>
+    <ClCompile Include="dumb_ui.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
